# mw-mcp-office365

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
docs/: analise-funcional-v1.0.md  analise-funcional-v1.1.md  assistant-playbook.md
docs/contactos/: analise-funcional-contactos.md
docs/fase-1/: estado-user-stories.md  runbook-validacao-email.md
docs/fase-2/: estado-user-stories.md  plano-implementacao.md  runbook-validacao-manual.md
docs/fase-3/: analise-funcional-teams.md  contrato-us-3.6.md  estado-user-stories.md  plano-implementacao.md  revisao-coordenador.md  runbook-validacao-manual.md
docs/fase-aprendizagem/: analise-funcional-aprendizagem.md  estado-user-stories.md
docs/fase-email-scheduling/: analise-funcional-agendamento.md  contrato-us-1.9-1.11.md  estado-user-stories.md
docs/poc-fase-0/: plano-implementacao.md  runbook-validacao-manual.md
src/: README.md
src/mcp_o365/: __init__.py  app.py  config.py  logging_setup.py  server.py
src/prompts/: assistant-playbook.md
tests/: conftest.py
tests/integration/: fake_graph.py  test_calendar_read_e2e.py  test_calendar_write_e2e.py  test_contacts_e2e.py  test_email_read_e2e.py  test_email_write_e2e.py  test_graph_client.py  test_health_metadata.py  test_learning_e2e.py  test_oauth_flow_planeA.py  test_teams_read_e2e.py  test_teams_write_e2e.py  test_tool_schema_subject.py  test_whoami_e2e.py
tests/unit/: test_approval_engine.py  test_attachments.py  test_audit.py  test_config.py  test_crypto.py  test_graph_calendar_client.py  test_graph_contacts.py  (+11 more)
(+36 files in other folders)
